2008-04-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkiconview.c (iview_get_path_at_pos): added missing
	argument types. Bug #1930481.
	Reported by nobody. Thanks!!!

2008-04-01  Hirofumi Nakagawa  <hnakagawa@users.sourceforge.net>

	* src/rbgtkwidget.c: removed needless functions gtk_widget_{get,set}_tooltip_{markup,text}.
	The tooltip is property so there is no need to implement binding method.

	* src/rbgtkaction.c: added Gtk::Action#create_menu.

2008-03-31  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkwidget.c: cleanup newly written codes.

	* src/rbgtkwidget.c: fixed naming conversion.

2008-03-31  Guillaume Cottenceau

	* src/rbgtktextmark.c, src/rbgdkdisplay.c, src/rbgtkrecentaction.c,
          src/rbgtkscalebutton.c, src/rbgtkstock.c, src/rbgtktextbuffer.c,
          src/rbgtktextmark.c, src/rbgtktooltip.c, src/rbgtktreeview.c,
          src/rbgtktreeviewcolumn.c, src/rbgtkvolumebutton.c,
	  src/rbgtkwidget.c: check for 2.12 version, not 2.11
	
2008-03-20  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkwindow.c: removed needless alias icon=.

2008-03-11  Kouhei Sutou  <kou@cozmixng.org>

	* test/: added.

	* src/rbgtkselectiondata.c: fixed a wrong type conversion bug.
	Reported by Masayuki Yamaguchi. Thanks!!!

2008-03-04  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkmain.c: don't use rb_argv.

2008-01-13  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgdkwindow.c: added Gdk::Window#set_user_time.
	Suggested by Aliaksey Kandratsenka. Thanks!!!

2008-01-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/depend: don't use ftools.
	Reported by Carlo E. Prelz. Thanks!!!

2007-12-28  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkaboutdialog.c: used GINT_TO_POINTER() to cast boolean
	value to gpointer.

	* src/:
	- used rb_errinfo().
	- used RSTRING_LEN() and RSTRING_PTR().
	- added const.

	* extconf.rb: checked rb_errinfo() availability.
	* src/rbgtkrecentfilter.c: used rb_errinfo().

	* src/rbgtk.c: removed needless #include "st.h".
